--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 		<br/> <br/>
 		<input type="text" placeholder="Enter Your Word" id="str2"/>
 		<br/> <br/>
-		<input type="submit" value="Sort"/>
+		<input type="submit" value="Check"/>
 	</form>
 	<h2 id="msg"></h2>
 	<script>
