--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 	<h1>Anagram Checker</h1>
 	<br/>
 	<form onsubmit="check()">
-		<input type="text" placeholder="Enter Your Word" id="str1"/>
+		<input type="text" placeholder="Enter Your First Word" id="str1"/>
 		<br/> <br/>
-		<input type="text" placeholder="Enter Your Word" id="str2"/>
+		<input type="text" placeholder="Enter Your Second Word" id="str2"/>
 		<br/> <br/>
 		<input type="submit" value="Check"/>
 	</form>
